<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:id="@+id/layNameNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/layScroll"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginEnd="1dp"
                                android:text="Name"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                android:layout_marginRight="1dp" />
                            <!-- view idea Reference: https://stackoverflow.com/questions/6992804/how-to-right-align-widget-in-horizontal-linear-layout-android -->
                            <View
                                android:layout_width="1dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:background="#000000" />

                            <TextView
                                android:id="@+id/tvRoomNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="Room#"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0" />

                <LinearLayout
                    android:id="@+id/layDiet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/menu_diet"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDiet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:id="@+id/layPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/menu_meal"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:id="@+id/laySides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/menu_side"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:id="@+id/layDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/menu_drink"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:id="@+id/layDesserts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/menu_desert"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDesserts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Send" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>